--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,6 +37,18 @@ body {
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s;
+  margin-left: 15px;
+}
+
+@media(max-width:786px){
+  .btn{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 30px;
+    margin-top: 70px;
+  }
 }
 
 .btn:hover {
